tests/error/experimental_errors/list_comprehension.py
from guppylang.decorator import guppy


@guppy
def main() -> None:
    [i for i in range(10)]


guppy.compile(main)
